kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-ns
  labels:
    name: ecommerce-ns
