kubernetes/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "ecommerce.ejadastore.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecomm-ui
            port:
              number: 80
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 5001
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 5002
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 5003
      - path: /api/payments
        pathType: Prefix
        backend:
          service:
            name: payments-service
            port:
              number: 5004
